Third part of patch from Maurizio
git-svn-id: https://svn.apache.org/repos/asf/manifoldcf/branches/CONNECTORS-1037@1629267 13f79535-47bb-0310-9956-ffa450edef68